# lazy-wspace

./: .gitignore  Cargo.toml  README.md  _CoqProject  rust-toolchain.toml  rustfmt.toml
lazy-wspace/: Cargo.toml  build.rs
lazy-wspace-generate/: Cargo.toml
lazy-wspace-generate/src/: inst.rs  lib.rs  node.rs
lazy-wspace-macros/: Cargo.toml
lazy-wspace-macros/src/: ir_node.rs  lib.rs  opcodes.rs
lazy-wspace/src/: error.rs  io.rs  lib.rs  main.rs  number.rs  tests.rs  vm.rs
lazy-wspace/src/ast/: inst.rs  lex.rs  mod.rs  parse.rs
lazy-wspace/src/hs/: int.rs  mod.rs
lazy-wspace/src/ir/: cfg.rs  graph.rs  heap.rs  inst.rs  instructions.rs  mod.rs  node.rs  peephole.rs  rewrites.txt  stack.rs  table.rs
lazy-wspace/src/ir/nodes/: arith.rs  control.rs  heap.rs  io.rs  mod.rs  node.rs  nodes.rs  stack.rs  values.rs
lazy-wspace/src/vm/: heap.rs  integer.rs  mod.rs  stack.rs  vm.rs
src/: error.rs  inst.rs  io.rs  lex.rs  lib.rs  main.rs  number.rs  parse.rs  tests.rs  vm.rs
src/ast/: cfg.rs  inst.rs  lex.rs  mod.rs
src/ir/: cfg.rs  dag.rs  exp.rs  graph.rs  heap.rs  mod.rs  node.rs  number.rs  peephole.rs  stack.rs  table.rs
src/parse/: integer.rs
src/ws/: ast.rs  mod.rs  scanner.rs
src/wsa/: lexer.rs  literals.rs  mod.rs
src/wsa/burghard/: ast.rs  lexer.rs  mod.rs
tests/: Makefile
tests/bounds/copy/: copy_2^29-1.ws  copy_2^29.ws  copy_2^31-1.ws  copy_2^31.ws  copy_2^32-1.ws  copy_2^32.ws  copy_2^63-1.ws  copy_2^63.ws  copy_2^64-1.ws  copy_2^64.ws
tests/bounds/slide/: slide_2^29-1.ws  slide_2^29.ws  slide_2^31-1.ws  slide_2^31.ws  slide_2^32-1.ws  slide_2^32.ws  slide_2^63-1.ws  slide_2^63.ws  slide_2^64-1.ws  slide_2^64.ws
tests/io/buffer_size/: printi_8191_bytes.ws  printi_8192_bytes.ws
tests/io/echo/: readc.ws  readc_loop.ws  readc_printc.ws  readc_printi.ws  readi_loop.ws  readi_printc.ws  readi_printi.ws
tests/io/utf8/: printc_high_surrogate.ws  printc_low_surrogate.ws  printc_maximum.ws  printc_negative.ws  printc_too_large.ws
tests/lazy/: copy_empty.ws  copy_negative.ws  copy_too_large.ws  retrieve_negative.ws  retrieve_too_large.ws  slide_empty.ws  slide_empty2.ws  slide_empty3.ws
tests/lazy/arith/: add.ws  div.ws  div_0.ws  mod.ws  mod_0.ws  mul.ws  sub.ws
tests/lazy/slide_empty/: then_div.ws  then_drop.ws  then_dup.ws  then_end.ws  then_jmp.ws  then_jn.ws  then_jz.ws  then_mod.ws  then_printi.ws  then_store.ws  then_sub.ws  then_swap.ws
tests/lazy/slide_empty/size0/: add.ws  call.ws  copy.ws  div.ws  drop.ws  dup.ws  end.ws  jmp.ws  jn.ws  jz.ws  label.ws  mod.ws  mul.ws  printc.ws  printi.ws  push.ws  readc.ws  readi.ws  ret.ws  retrieve.ws  slide.ws  store.ws  sub.ws  swap.ws
tests/lazy/slide_empty/size1/: add.ws  call.ws  copy.ws  eof.ws  label.ws  mul.ws  printc.ws  push.ws  readc.ws  readi.ws  ret.ws  retrieve.ws  slide.ws
tests/lazy/slide_empty/size2/: add.ws  call.ws  copy.ws  div.ws  drop.ws  dup.ws  end.ws  jmp.ws  jn.ws  jz.ws  label.ws  mod.ws  mul.ws  printc.ws  printi.ws  push.ws  readc.ws  readi.ws  ret.ws  retrieve.ws  slide.ws  store.ws  sub.ws  swap.ws
tests/parse/: implicit_end.ws
tests/parse/incomplete_opcode/: tls.ws
tests/parse/invalid_utf8/: bad_byte_1.ws  bad_byte_2.ws  bad_byte_3.ws  bad_byte_4.ws  incomplete_2.ws  incomplete_3.ws  incomplete_4.ws  overlong.ws  too_large.ws  unexpected_continuation.ws  unpaired_high_surrogate.ws  unpaired_low_surrogate.ws
tests/parse/undefined_label/: call.ws  jmp.ws  jn_false.ws  jn_true.ws  jz.ws  jz_false.ws
tests/parse/unrecognized_opcode/: stt.ws  tlsl.ws  tstl.ws
tests/parse/unterminated_arg/: call_0.ws  call_1.ws  call_empty.ws  copy_-.ws  copy_-1.ws  copy_1.ws  jmp_1.ws  jn_0.ws  jz_1.ws  label_1.ws  slide_+.ws  slide_-.ws  slide_-0.ws  slide_-1.ws  slide_0.ws  slide_1.ws
tests/underflow/: add.ws  add_lhs.ws  div.ws  div_lhs.ws  jn.ws  jz.ws  mod.ws  mod_lhs.ws  mul.ws  mul_lhs.ws  printc.ws  printi.ws  readc.ws  readi.ws  retrieve.ws  slide.ws  slide_empty.ws  slide_negative.ws  slide_zero.ws  store.ws  store_lhs.ws  sub.ws  sub_lhs.ws  swap.ws  swap_lhs.ws
theories/: AStack.v  Arith.v  IR.v
vscode-extension/: .eslintrc.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: hapyli.language-configuration.json  hapyli.tmLanguage.json  whitespace.language-configuration.json  whitespace.tmLanguage.json  wsa-burghard.language-configuration.json  wsa-burghard.tmLanguage.json
wspace-syntax/: Cargo.toml  README.md
wspace-syntax-test/: Cargo.toml  build.rs
wspace-syntax-test/tests/: read_integer.hs  read_integer.rs
wspace-syntax/src/: lib.rs  main.rs  source.rs
wspace-syntax/src/hs/: abort.rs  error.rs  integer.rs  mod.rs  show.rs
wspace-syntax/src/parse/: integer.rs  mod.rs
wspace-syntax/src/source/: file.rs  mod.rs  span.rs
wspace-syntax/src/util/: mod.rs  regex_string.rs
wspace-syntax/src/ws/: ast.rs  builder.rs  lex.rs  mappings.rs  mod.rs  scanner.rs  tests.rs  token.rs
wspace-syntax/src/ws/ast/: error.rs  inst.rs  literals.rs  mod.rs  parser.rs
wspace-syntax/src/ws/dialects/: gorispace.rs  grassmudhorse.rs  mod.rs
wspace-syntax/src/ws/lex/: bit.rs  byte.rs  bytes.rs  char.rs  lexer.rs  meta.rs  mod.rs  regex.rs  span.rs  std.rs  token.rs
wspace-syntax/src/wsa/: ast.rs  dialect.rs  mod.rs
wspace-syntax/src/wsa/burghard/: ast.rs  lexer.rs  line_parser.rs  mod.rs
wspace-syntax/src/wsa/compat/: mod.rs
wspace-syntax/src/wsa/whitelips/: mod.rs
