[workspace.package]
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
repository = "https://github.com/thaliaarchi/lazy-wspace"
license = "MPL-2.0"

[workspace]
members = [
  "lazy-wspace",
  "lazy-wspace-macros",
  "wspace-syntax",
  "wspace-syntax-test",
]
resolver = "2"

[patch.crates-io]
# Waiting on https://github.com/rust-phf/rust-phf/pull/289
phf = { git = "https://github.com/thaliaarchi/rust-phf" }

[profile.release]
lto = true

[workspace.lints.clippy]
dbg_macro = "warn"
# default_numeric_fallback = "warn"
filetype_is_file = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
# iter_over_hash_type = "warn" # Rust 1.75
lossy_float_literal = "warn"
missing_assert_message = "warn"
map_unwrap_or = "warn"
module_name_repetitions = "allow"
# missing_asserts_for_indexing = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "forbid"
self_named_module_files = "forbid"
string_add = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "forbid"
uninlined_format_args = "forbid"
unnecessary_safety_comment = "forbid"
unnecessary_safety_doc = "forbid"

# Until my API is more stable
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
todo = "allow"
