[workspace.package]
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
repository = "https://github.com/thaliaarchi/lazy-wspace"
license = "MPL-2.0"

[workspace]
members = [
  "lazy-wspace",
  "lazy-wspace-macros",
  "wspace-syntax",
  "wspace-syntax-test",
]
resolver = "2"

[patch.crates-io]
# Waiting on https://github.com/rust-phf/rust-phf/pull/289
phf = { git = "https://github.com/thaliaarchi/rust-phf" }

[profile.release]
lto = true

[workspace.lints.clippy]
map_unwrap_or = "warn"
module_name_repetitions = "allow"
uninlined_format_args = "forbid"

## clippy::restriction
dbg_macro = "warn"
# default_numeric_fallback = "warn"
filetype_is_file = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
# iter_over_hash_type = "warn" # Rust 1.75
lossy_float_literal = "warn"
missing_assert_message = "warn"
# missing_asserts_for_indexing = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "forbid"
self_named_module_files = "forbid"
string_add = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "forbid"
unnecessary_safety_comment = "forbid"
unnecessary_safety_doc = "forbid"

## clippy::cargo
cargo_common_metadata = "warn"
multiple_crate_versions = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"

## Allowed until my API is more stable
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
todo = "allow"
