[package]
name = "lazy-wspace-generate"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
rust-version = "1.70"
description = "Rust code generator for rewrite rules"
repository = "https://github.com/thaliaarchi/lazy-wspace"
license = "MPL-2.0"
keywords = ["whitespace", "compiler", "rewrite"]
categories = ["compilers", "development-tools::build-utils"]

[dependencies]
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
