[package]
name = "lazy-wspace"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
rust-version = "1.74" # for OsStr::as_encoded_bytes
description = "Optimizing Whitespace compiler and interpreter with lazy semantics"
repository = "https://github.com/thaliaarchi/lazy-wspace"
license = "MPL-2.0"
keywords = ["whitespace", "compiler", "interpreter"]
categories = ["compilers"]
default-run = "compile"

[dependencies]
bitvec = "1.0"
hashbrown = { version = "0.14", features = ["raw"] }
lazy-wspace-macros = { path = "../lazy-wspace-macros" }
rug = { version = "1.22", features = ["integer"], default-features = false }
simdutf8 = "0.1"
smallvec = { version = "1.11", features = ["union"] }
static_assertions = "1.1"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
utf8-chars = "3.0"
wspace-syntax = { path = "../wspace-syntax" }
