[package]
name = "wspace-syntax-test"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
description = "Tests for wspace-syntax"
repository = "https://github.com/thaliaarchi/lazy-wspace"
license = "MPL-2.0"
publish = false

[dependencies]
rug = { version = "1.24", features = ["integer", "std"], default-features = false }
wspace-syntax = { path = "../wspace-syntax" }

[lints]
workspace = true
