[package]
name = "wspace-syntax"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
description = "Parsing and syntax trees for the Whitespace programming language and its various syntaxes"
repository = "https://github.com/thaliaarchi/lazy-wspace"
license = "MPL-2.0"
keywords = ["whitespace", "syntax", "parsing"]
categories = ["parser-implementations"]

[dependencies]
aho-corasick = "1.1"
bitvec = "1.0"
lazy-wspace-macros = { path = "../lazy-wspace-macros" }
memchr = "2.6"
phf = { version = "0.11", features = ["macros", "uncased"] }
regex-automata = "0.3"
regex-syntax = "0.7"
rug = { version = "1.22", features = ["integer"], default-features = false }
simdutf8 = "0.1"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
uncased = "0.9"
unicode-ident = "1.0"
