[package]
name = "wspace-syntax"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
rust-version = "1.80" # for size_of in prelude
description = "Parsing and syntax trees for the Whitespace programming language and its various syntaxes"
repository = "https://github.com/thaliaarchi/lazy-wspace"
license = "MPL-2.0"
keywords = ["whitespace", "syntax", "parsing"]
categories = ["parser-implementations"]

[dependencies]
aho-corasick = "1.1"
bitvec = "1.0"
bstr = { version = "1.9", default-features = false }
lazy-wspace-macros = { path = "../lazy-wspace-macros" }
logos = "0.14"
memchr = "2.7"
phf = { version = "0.11", features = ["macros", "uncased"] }
regex = "1.10"
regex-automata = "0.4"
regex-syntax = "0.8"
rug = { version = "1.24", features = ["integer", "std"], default-features = false }
simdutf8 = "0.1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
uncased = "0.9"
unicode-ident = "1.0"

[lints]
workspace = true
